// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxHelpers should automate creating general promise action reducers: generatedPromiseActionReducer basic updated state 1`] = `
Object {
  "fulfilledState": Object {
    "data": Object {
      "dolor": "sit",
      "lorem": "ipsum",
    },
    "date": "Tue, 11 Feb 2020 15:27:16 GMT",
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "pendingState": Object {
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": true,
    "update": false,
  },
  "rejectedState": Object {
    "error": true,
    "errorMessage": "Request failed with status code 400",
    "errorStatus": 400,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
}
`;

exports[`ReduxHelpers should automate creating promise action reducers with meta data: generatedPromiseActionReducer passed meta data 1`] = `
Object {
  "appliedMetaIdFulfilledState": Object {
    "test id": Object {
      "data": Object {
        "dolor": "sit",
        "lorem": "ipsum",
      },
      "date": "Tue, 11 Feb 2020 15:27:16 GMT",
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": "test data",
      "metaId": "test id",
      "metaQuery": Object {
        "test": "query",
      },
      "pending": false,
      "update": false,
    },
  },
  "fulfilledState": Object {
    "data": Object {
      "dolor": "sit",
      "lorem": "ipsum",
    },
    "date": "Tue, 11 Feb 2020 15:27:16 GMT",
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "metaData": "test data",
    "metaId": undefined,
    "metaQuery": Object {
      "test": "query",
    },
    "pending": false,
    "update": false,
  },
}
`;

exports[`ReduxHelpers should get a date from a service call response: ARRAY date 1`] = `"Fri, 07 Feb 2020 10:46:53 GMT"`;

exports[`ReduxHelpers should get a date from a service call response: date 1`] = `"Fri, 07 Feb 2020 10:46:53 GMT"`;

exports[`ReduxHelpers should get a http status from a service call response: ARRAY mismatched status 1`] = `400`;

exports[`ReduxHelpers should get a http status from a service call response: ARRAY status 1`] = `200`;

exports[`ReduxHelpers should get a http status from a service call response: fallback status 1`] = `200`;

exports[`ReduxHelpers should get a http status from a service call response: missing status 1`] = `0`;

exports[`ReduxHelpers should get a http status from a service call response: status 1`] = `200`;

exports[`ReduxHelpers should get a message from a service call response: 3XX fallback message 1`] = `"Multiple Choices"`;

exports[`ReduxHelpers should get a message from a service call response: 4XX fallback message 1`] = `"Bad Request"`;

exports[`ReduxHelpers should get a message from a service call response: 5XX fallback message 1`] = `"Internal Server Error"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY mismatched response messages 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY response for 2XX 1`] = `"OK"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY response for 4XX 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should get a message from a service call response: response for 2XX 1`] = `"OK"`;

exports[`ReduxHelpers should get a message from a service call response: response for 4XX 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should have specific functions: reduxHelpers 1`] = `
Object {
  "FULFILLED_ACTION": [Function],
  "HTTP_STATUS_RANGE": [Function],
  "PENDING_ACTION": [Function],
  "REJECTED_ACTION": [Function],
  "generatedPromiseActionReducer": [Function],
  "getDateFromResults": [Function],
  "getMessageFromResults": [Function],
  "getSingleResponseFromResultArray": [Function],
  "getStatusFromResults": [Function],
  "setStateProp": [Function],
  "singlePromiseDataResponseFromArray": [Function],
}
`;

exports[`ReduxHelpers should update a state object: dont reset state object 1`] = `
Object {
  "ipsum": false,
  "lorem": true,
}
`;

exports[`ReduxHelpers should update a state object: reset state object 1`] = `
Object {
  "ipsum": true,
  "lorem": true,
}
`;
